k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legal-term-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: legal-term-api
  template:
    metadata:
      labels:
        app: legal-term-api
    spec:
      containers:
      - name: legal-term-api
        image: tatia7/legal-term-api:e7c9b612a269698caab05912b1e4e450aa20c5d9
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
