k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: legal-term-api
spec:
  selector:
    app: legal-term-api
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
